--- a/Java 8/.devcontainer/devcontainer.json
+++ b/Java 8/.devcontainer/devcontainer.json
@@ -7,7 +7,8 @@
 
     "features": {
         "ghcr.io/devcontainers/features/java:1": {
-            "version": "none"
+            "version": "none",
+            "installMaven": true
         },
         "ghcr.io/devcontainers/features/git:1": {
             "version": "latest",
