Fix balance calculation

--- a/Python 3/vacations-balance/settings.ini
+++ b/Python 3/vacations-balance/settings.ini
@@ -6,7 +6,9 @@ TotalTakenDaysColumn = B
 StartDateCell = B2
 StartDateFormat = %Y/%m/%d
 BalanceDaysCell = B3
-AllowedDaysYearFirstCell = A6
+RatioDaysCell = D3
+PreviousVacationDaysCell = B4
+AllowedDaysYearFirstCell = A7
 AllowedDaysValueColumn = B
 
 [Calculation]
