Read by row expansion

--- a/Python 3/vacations-balance/settings.ini
+++ b/Python 3/vacations-balance/settings.ini
@@ -3,13 +3,16 @@
 FileToAnalizeLocation = files\vacations-registry.xlsx
 EmployeeNameFirstCell = A2
 TotalTakenDaysColumn = B
-StartDateCell = B2
+StartDateCell = B3
 StartDateFormat = %Y/%m/%d
-BalanceDaysCell = B3
-RatioDaysCell = D3
-PreviousVacationDaysCell = B4
-AllowedDaysYearFirstCell = A7
+BalanceDaysCell = B5
+; EnjoyedVacationsDaysCell = B4
+PreviousVacationDaysCell = B6
+RatioDaysCell = D5
+AllowedDaysYearFirstCell = A9
 AllowedDaysValueColumn = B
+AllowedDaysValueRow = 
+CompanyNameCell = B2
 
 [Calculation]
 BaseYear = 2020
