--- a/Java 21/vacations-balance/pom.xml
+++ b/Java 21/vacations-balance/pom.xml
@@ -55,7 +55,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>8.8.3</version>
                 <configuration>
-                    <mainClass>com.legadi.ui.vacations.VacationsBalanceApplication</mainClass>
+                    <mainClass>com.legadi.ui.vacations.MainApplication</mainClass>
                 </configuration>
             </plugin>
         </plugins>
