--- a/Java 21/vacations-balance/pom.xml
+++ b/Java 21/vacations-balance/pom.xml
@@ -19,8 +19,9 @@
         <java.version>21</java.version>
         <javafx.version>21.0.9</javafx.version>
         <javafx.maven.plugin.version>8.8.3</javafx.maven.plugin.version>
-        <poi.version>5.5.0</poi.version>
         <jackson-databind.version>2.20.1</jackson-databind.version>
+        <poi.version>5.5.0</poi.version>
+        <lombok.version>1.18.42</lombok.version>
     </properties>
 
     <dependencies>
@@ -59,6 +60,12 @@
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml</artifactId>
             <version>${poi.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
