--- a/Java 21/vacations-balance/src/main/resources/settings.json
+++ b/Java 21/vacations-balance/src/main/resources/settings.json
@@ -7,9 +7,10 @@
     "balanceDaysCell": "B5",
     "previousVacationsDaysCell": "B6",
     "radioDaysCell": "D5",
-    "allowedDaysYearFirstCell": "B6",
+    "allowedDaysYearFirstCell": "A9",
+    "allowedDaysHorizontal": false,
     "allowedDaysValueColumn": "B",
-    "allowedDaysValueRow": null,
+    "allowedDaysValueRow": 10,
     "companyNameCell": "B2",
     "baseYear": 2020,
     "totalDaysYear": 365,
