--- a/Java 21/vacations-balance/pom.xml
+++ b/Java 21/vacations-balance/pom.xml
@@ -12,7 +12,7 @@
 
     <groupId>com.legadi.ui</groupId>
     <artifactId>vacations-balance</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0-beta</version>
     <name>vacations-balance</name>
 
     <properties>
@@ -22,6 +22,7 @@
         <jackson-databind.version>2.20.1</jackson-databind.version>
         <poi.version>5.5.0</poi.version>
         <lombok.version>1.18.42</lombok.version>
+        <maven-assembly-plugin.version>3.8.0</maven-assembly-plugin.version>
     </properties>
 
     <dependencies>
@@ -72,16 +73,28 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.openjfx</groupId>
-                <artifactId>javafx-maven-plugin</artifactId>
-                <version>8.8.3</version>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>${maven-assembly-plugin.version}</version>
                 <configuration>
-                    <mainClass>com.legadi.ui.vacations.MainApplication</mainClass>
+                <archive>
+                    <manifest>
+                        <mainClass>com.legadi.ui.vacations.MainApplication</mainClass>
+                    </manifest>
+                </archive>
+                <descriptorRefs>
+                    <descriptorRef>jar-with-dependencies</descriptorRef>
+                </descriptorRefs>
                 </configuration>
+                <executions>
+                <execution>
+                    <id>make-assembly</id>
+                    <phase>package</phase>
+                    <goals>
+                        <goal>single</goal>
+                    </goals>
+                </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
