--- a/Java/Java 9/jdk9-features/pom.xml
+++ b/Java/Java 9/jdk9-features/pom.xml
@@ -4,17 +4,40 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.legadi.jdk9</groupId>
-    <artifactId>jdk9-features</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
-    <name>jdk9-features</name>
+    <artifactId>jdk9-features-parent</artifactId>
+    <version>${global.version}</version>
+    <packaging>pom</packaging>
 
     <properties>
         <java.version>9</java.version>
+        <maven.compiler.target>1.9</maven.compiler.target>
+        <maven.compiler.source>1.9</maven.compiler.source>
+        <global.version>1.0.0-SNAPSHOT</global.version>
+        <maven-compiler-plugin.version>3.14.1</maven-compiler-plugin.version>
     </properties>
+
+    <modules>
+        <module>module_a</module>
+        <module>module_b</module>
+        <module>module_c</module>
+        <module>tester</module>
+    </modules>
 
     <dependencies></dependencies>
 
     <build>
-        <plugins></plugins>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>${maven-compiler-plugin.version}</version>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                    <showWarnings>true</showWarnings>
+                    <showDeprecation>true</showDeprecation>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
 </project>
