--- a/Java/Java 9/jdk9-features/module_a/pom.xml
+++ b/Java/Java 9/jdk9-features/module_a/pom.xml
@@ -11,5 +11,6 @@
 
     <artifactId>jdk9-features-module-a</artifactId>
 
-    <dependencies></dependencies>
+    <dependencies>
+    </dependencies>
 </project>
