--- a/Java/Java 10/jdk10-features/pom.xml
+++ b/Java/Java 10/jdk10-features/pom.xml
@@ -3,27 +3,44 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.legadi.jdk9</groupId>
-    <artifactId>jdk9-features-parent</artifactId>
+    <groupId>com.legadi.jdk10</groupId>
+    <artifactId>jdk10-features-poc</artifactId>
     <version>${global.version}</version>
-    <packaging>pom</packaging>
 
     <properties>
-        <java.version>9</java.version>
-        <maven.compiler.target>1.9</maven.compiler.target>
-        <maven.compiler.source>1.9</maven.compiler.source>
+        <java.version>10</java.version>
+        <maven.compiler.target>10</maven.compiler.target>
+        <maven.compiler.source>10</maven.compiler.source>
         <global.version>1.0.0-SNAPSHOT</global.version>
         <maven-compiler-plugin.version>3.14.1</maven-compiler-plugin.version>
+        <junit.version>5.14.2</junit.version>
+        <hamcrest.version>3.0</hamcrest.version>
     </properties>
 
-    <modules>
-        <module>module_a</module>
-        <module>module_b</module>
-        <module>module_c</module>
-        <module>poc</module>
-    </modules>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.junit</groupId>
+                <artifactId>junit-bom</artifactId>
+                <version>${junit.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <dependencies>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest</artifactId>
+            <version>${hamcrest.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
