--- a/Java/Java 15/jdk15-features/pom.xml
+++ b/Java/Java 15/jdk15-features/pom.xml
@@ -11,6 +11,7 @@
         <java.version>15</java.version>
         <global.version>1.0.0-SNAPSHOT</global.version>
         <maven-compiler-plugin.version>3.14.1</maven-compiler-plugin.version>
+        <jackson-databind.version>2.21.0</jackson-databind.version>
         <junit.version>5.14.2</junit.version>
         <hamcrest.version>3.0</hamcrest.version>
     </properties>
@@ -28,6 +29,13 @@
     </dependencyManagement>
 
     <dependencies>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson-databind.version}</version>
+            <scope>test</scope>
+        </dependency>
+
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
