--- a/Java/Java 21/jdk21-features/pom.xml
+++ b/Java/Java 21/jdk21-features/pom.xml
@@ -4,17 +4,57 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.legadi.jdk21</groupId>
-    <artifactId>jdk21-features</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
-    <name>jdk21-features</name>
+    <artifactId>jdk21-features-poc</artifactId>
+    <version>${global.version}</version>
 
     <properties>
         <java.version>21</java.version>
+        <global.version>1.0.0-SNAPSHOT</global.version>
+        <maven-compiler-plugin.version>3.14.1</maven-compiler-plugin.version>
+        <junit.version>6.0.2</junit.version>
+        <hamcrest.version>3.0</hamcrest.version>
     </properties>
 
-    <dependencies></dependencies>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.junit</groupId>
+                <artifactId>junit-bom</artifactId>
+                <version>${junit.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest</artifactId>
+            <version>${hamcrest.version}</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
     <build>
-        <plugins></plugins>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>${maven-compiler-plugin.version}</version>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                    <showWarnings>true</showWarnings>
+                    <showDeprecation>true</showDeprecation>
+                    <enablePreview>true</enablePreview>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
 </project>
